Add user registration (jwt), mapper

--- a/WalletApi/Wallet.Web/appsettings.Development.json
+++ b/WalletApi/Wallet.Web/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Host=localhost;Port=5432;Database=Wallets;Username=postgres;Password=admin"
   },
+  "Jwt": {
+    "Secret": "HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
