--- a/WalletApi/Wallet.Application/Wallet.Application.csproj
+++ b/WalletApi/Wallet.Application/Wallet.Application.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Wallet.Core\Wallet.Core.csproj" />
+    <ProjectReference Include="..\Wallet.Infrastructure\Wallet.Infrastructure.csproj" />
     <ProjectReference Include="..\Wallet.Shared\Wallet.Shared.csproj" />
   </ItemGroup>
 
