add docker support. Added Dockerfile & docker-compose file for asp.net app + postgresql db

--- a/WalletApi/Wallet.Web/appsettings.json
+++ b/WalletApi/Wallet.Web/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=postgres_db;Port=5432;Database=Wallets;Username=postgres;Password=admin"
+  },
+  "Jwt": {
+    "Secret": "HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY_HERE_IS_TEST_SECRET_KEY"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
